css/style.css
h1 {
  text-align: center;
  font-size: xx-large;
  line-height: 40px;
}

body {
  display: flex;
  justify-content: center;
  background-image: url(/Assets/Trees1.png);
  font-family: 'Press Start 2P', cursive;
  line-height: 20px;
  text-shadow: 0 1px 0 #757575, 
  0 2px 0 #161616,
  0 3px 0 #000000,
  0 4px 0 #000000,
  0 5px 0 #000000,
  0 6px 1px rgba(0,0,0,.1),
  0 0 5px rgba(0,0,0,.1),
  0 1px 3px rgba(0,0,0,.3),
  0 3px 5px rgba(0,0,0,.2),
  0 5px 10px rgba(0,0,0,.25),
  0 10px 10px rgba(0,0,0,.2),
  0 20px 20px rgba(0,0,0,.15);
  color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
}

section {
  display: flex;
  align-items: center;
  flex-direction: column;
  
}


button {
  margin: 2px;
  padding: 6px 15px;
  min-width: 100px;
  font-size: auto;
  text-align: center;
  background-color: white;
  background-image: url("Assets/simpleStoneButton.png");
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center;
  font-family: 'Press Start 2P', cursive;
  border: solid 2px black;
  border-radius: 10px;
  cursor: pointer;
}

button:hover {
  background-color: black;
  color: white;
  font-size: large;
  border-color: solid 5px white;
}

.selector {
  min-height: 25px;
  max-width: 200px;
  min-width: 200px;
  text-align: center;
  font-size: auto;
  font-family: 'Press Start 2P', cursive;
  border: solid 2px black;
  border-radius: 10px;
  margin: 2px;
  padding: 6px 15px;
}

.prompt {
  text-shadow: 0 1px 0 #757575, 
  0 2px 0 #161616,
  0 3px 0 #000000,
  0 4px 0 #000000,
  0 5px 0 #000000,
  0 6px 1px rgba(0,0,0,.1),
  0 0 5px rgba(0,0,0,.1),
  0 1px 3px rgba(0,0,0,.3),
  0 3px 5px rgba(0,0,0,.2),
  0 5px 10px rgba(0,0,0,.25),
  0 10px 10px rgba(0,0,0,.2),
  0 20px 20px rgba(0,0,0,.15);
  color: white;
  text-align: center;
  max-width: 500px;
}

.lildude {
  animation: drift 15s linear infinite;
}

@keyframes drift {
	from {
		transform: translateX(-900px);
	}
	to {
		transform: translateX(900px);
	}
}

